--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "axios": "^1.7.7",
     "react": "^18.3.1",
     "react-dom": "^18.3.1"
+    "lucide-react": "^0.456.0"
   },
   "devDependencies": {
     "@vitejs/plugin-react": "^4.3.1",
