--- a/package.json
+++ b/package.json
@@ -1,20 +1,20 @@
 {
-  "name": "zp-life-rpg-vercel",
-  "version": "0.1.0",
+  "name": "zp-rpg",
   "private": true,
+  "version": "0.0.1",
   "scripts": {
     "dev": "vite",
     "build": "vite build",
-    "preview": "vite preview --port 5173"
+    "preview": "vite preview"
   },
   "dependencies": {
     "axios": "^1.7.7",
+    "lucide-react": "^0.456.0",
     "react": "^18.3.1",
     "react-dom": "^18.3.1"
-    "lucide-react": "^0.456.0"
   },
   "devDependencies": {
-    "@vitejs/plugin-react": "^4.3.1",
-    "vite": "^5.4.8"
+    "@vitejs/plugin-react": "^4.3.2",
+    "vite": "^5.4.21"
   }
 }
